# kagetsu

./: .dockerignore  .gitignore  Cargo.toml  README.en.md  README.ja.md  README.md  about.hbs  about.toml  compose.yaml  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
crates/kagetsu/: Cargo.toml  README.md
crates/kagetsu-core/: Cargo.toml  README.md
crates/kagetsu-tui/: Cargo.toml
crates/kagetsu-tui/src/: lib.rs
crates/kagetsu-tui/src/ui/: edit_config_modal.rs  mod.rs  paint.rs  theme.rs  widgets.rs
crates/kagetsu-tui/src/ui/screens/: config.rs  online_lobby.rs
crates/kagetsu-web/: Cargo.toml  Dockerfile  README.md
crates/kagetsu-web/frontend/: index.html  package-lock.json  package.json  vite.config.js
crates/kagetsu-web/frontend/public/: colors_and_type.css
crates/kagetsu-web/frontend/src/: App.svelte
crates/kagetsu-web/frontend/src/lib/: router.js
crates/kagetsu-web/frontend/src/lib/core/: Button.svelte  DiscardPile.svelte  DiscoveryPill.svelte  DorjeMark.svelte  Eyebrow.svelte  Row.svelte  ThreeStripes.svelte  TileRow.svelte  game-fixture.js  tile-utils.js
crates/kagetsu-web/frontend/src/lib/screens/: ConfigScreen.svelte  Frame.svelte  GameScreen.svelte  HandResultScreen.svelte  Home.svelte  LobbyScreen.svelte  MenuScreen.svelte  RoomScreen.svelte  ZeroTrustGameScreen.svelte
crates/kagetsu-web/frontend/src/lib/screens/game/: ActionOption.svelte  CenterCluster.svelte  CentralPlateCompact.svelte  KV.svelte  MeldGroup.svelte  SidePlayer.svelte  Table.svelte
crates/kagetsu-web/frontend/src/lib/screens/multiplayer/: PlayerBadge.svelte  SeatCard.svelte
crates/kagetsu-web/frontend/src/lib/screens/pregame/: Radio.svelte
crates/kagetsu-web/frontend/src/lib/screens/results/: BigStat.svelte  StandingRow.svelte  YakuRow.svelte
crates/kagetsu-web/frontend/src/lib/screens/zerotrust/: Evt.svelte  ZTHandStrip.svelte  ZTSidePanel.svelte
crates/kagetsu-web/src/: main.rs
crates/kagetsu-web/static/: index.html
crates/kagetsu-web/static/assets/: index-B1fDlc11.css  index-CjDPOYx3.js  index-CjDPOYx3.js.map
crates/majo-core/: Cargo.toml
crates/majo-core/src/: lib.rs
crates/majo-core/src/ai/: dummy.rs
crates/majo-core/src/dev/: recorder.rs
crates/majo-core/src/engine/: event.rs  match_state.rs  round_state.rs  score.rs
crates/majo-core/src/engine/domain/: hand.rs  mod.rs  tile.rs  yaku.rs
crates/majo-core/src/mental_poker/: card_mapping.rs  elgamal.rs  mod.rs  protocol_discard.rs  protocol_draw.rs  scenarios.rs
crates/majo-core/src/net/p2p/: bootstrap.rs  join.rs  mod.rs  region.rs  swarm.rs
crates/majo-core/src/net/room/: lobby.rs  projection.rs  zerotrust.rs
crates/majo-core/tests/: engine_drives_match.rs  probe_claw_relay.rs  proptest_invariants.rs  scenarios_calls.rs  scenarios_disconnect.rs  scenarios_game_flow.rs  scenarios_lobby.rs
crates/majo-core/tests/common/: mod.rs
crates/majo-core/tests/replay/: driver.rs  fixture_runner.rs  mjai_pai.rs  mod.rs  replay_log.rs  tenhou_meld.rs  tenhou_pai.rs  tenhou_to_mjai.rs
crates/tui-majo/: Cargo.toml
crates/tui-majo/src/: lib.rs
crates/tui-majo/src/ui/: chi_picker.rs  edit_config_modal.rs  mod.rs  paint.rs  theme.rs  widgets.rs
crates/tui-majo/src/ui/screens/: config.rs  game.rs  gameover.rs  main_menu.rs  online_game.rs  online_lobby.rs  online_room.rs  online_zerotrust_game.rs
crates/web-majo/: Cargo.toml  README.md
crates/web-majo/frontend/: index.html  package-lock.json  package.json
crates/web-majo/frontend/src/: App.svelte
crates/web-majo/frontend/src/lib/core/: BackInner.svelte  Card.svelte  Hr.svelte  KeyBadge.svelte  Tile.svelte  Trilingual.svelte  pigments.js
crates/web-majo/frontend/src/lib/screens/: ActionModal.svelte  Frame.svelte  GameScreen.svelte  Home.svelte  MatchEndScreen.svelte  MenuScreen.svelte  ZeroTrustGameScreen.svelte
crates/web-majo/frontend/src/lib/screens/game/: DiscardPileFlat.svelte  Divider.svelte  HandStrip.svelte  Mini.svelte  SeatLabelInline.svelte  SidePanel.svelte  Stat.svelte  Wall.svelte  WallSlot.svelte
crates/web-majo/frontend/src/lib/screens/multiplayer/: RoomRow.svelte
crates/web-majo/frontend/src/lib/screens/pregame/: ConfigGroup.svelte  NavItem.svelte  Toggle.svelte
crates/web-majo/frontend/src/lib/screens/results/: DeltaRow.svelte
crates/web-majo/frontend/src/lib/screens/zerotrust/: PeerRow.svelte  ProtoStep.svelte  ProtocolPill.svelte  ZTBadge.svelte
crates/web-majo/src/: main.rs
crates/web-majo/static/: action-modal.jsx  core.jsx  game-screen.jsx  index.html  multiplayer.jsx  pregame.jsx  results.jsx  zerotrust.jsx
crates/web-majo/static/assets/: index-C1CwHiGP.js  index-C1CwHiGP.js.map  index-CYaYNYqX.js  index-CYaYNYqX.js.map  index-SzBT3pQj.css
docs/: release.md
docs/design/: abstract-model.md  pure-functional-refactor.md
docs/refactor/: rename-todo.md  svelte-translation-plan.md  workspace-plan.md
docs/spec/: README.md  game-flow.md  scoring.md  winning-shapes.md  yaku.md
src/: action.rs  config.rs  decompose.rs  game.rs  game_engine.rs  hand.rs  legacy_state.rs  lib.rs  main.rs  meld.rs  player.rs  score.rs  tile.rs  ui.rs  wall.rs  yaku.rs
src/ai/: dummy.rs  mod.rs  timeout.rs
src/config/: mod.rs
src/dev/: mod.rs  recorder.rs  savestate.rs
src/domain/: action.rs  decompose.rs  hand.rs  meld.rs  mod.rs  tile.rs  yaku.rs
src/engine/: event.rs  match_state.rs  mod.rs  op.rs  phase.rs  player.rs  round_state.rs  rules.rs  score.rs  state.rs  wall.rs
src/mental_poker/: cut_and_choose.rs  dleq.rs  elgamal.rs  ipa.rs  joint_key.rs  mod.rs  pedersen.rs  protocol_call.rs  protocol_concealed_kan.rs  protocol_discard.rs  protocol_draw.rs  protocol_reveal.rs  protocol_state.rs  protocol_win.rs  schnorr.rs  session.rs  shuffle.rs  transcript.rs  wire.rs
src/net/: client.rs  discovery.rs  mod.rs  protocol.rs  room.rs  server.rs  session.rs
src/ui/: chi_picker.rs  confirm.rs  edit_config_modal.rs  (+4 more)
tests/: engine_drives_match.rs  probe_claw_relay.rs  proptest_invariants.rs  scenarios_calls.rs  scenarios_disconnect.rs  scenarios_game_flow.rs  scenarios_lobby.rs  scenarios_replay.rs
(+107 files in other folders)
