[package]
name = "tui-majo"
version = "1.0.0"
edition = "2024"
description = "Riichi Mahjong (日本麻将) in your terminal, written in Rust + ratatui"
license = "GPL-3.0-or-later"
repository = "https://github.com/XuanLee-HEALER/tui-majo"
homepage = "https://github.com/XuanLee-HEALER/tui-majo"
readme = "README.md"
keywords = ["mahjong", "riichi", "tui", "ratatui", "japanese"]
categories = ["games", "command-line-utilities"]
default-run = "tui-majo"
exclude = [
    ".design-package/",
    "docs/scratch.md",
    "docs/img/",
    "*.png",
]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1"
thiserror = "2"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
dirs = "5"
toml = "0.8"
# 多人对战 (P2P) 相关.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
futures-util = "0.3"
libp2p = { version = "0.56", features = [
    "tokio",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "request-response",
    "cbor",
    "ed25519",
    "macros",
    "serde",
] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
# 仅 tests/replay tenhou mjlog parser 用
quick-xml = "0.36"

[[bin]]
name = "tui-majo"
path = "src/main.rs"

[[bin]]
name = "tui-majo-game"
path = "src/bin/game.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
