[workspace]
resolver = "2"
members = ["crates/majo-core", "crates/tui-majo", "crates/web-majo"]

[workspace.package]
edition = "2024"
version = "2.1.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/XuanLee-HEALER/tui-majo"
homepage = "https://github.com/XuanLee-HEALER/tui-majo"

[workspace.dependencies]
# common
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# rng / time / fs
rand = "0.9"
rand_chacha = "0.9"
dirs = "5"
toml = "0.8"
time = { version = "0.3", features = ["local-offset"] }
uuid = { version = "1", features = ["v4", "serde"] }

# async runtime + net
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
futures-util = "0.3"
libp2p = { version = "0.56", features = [
    "tokio",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "request-response",
    "cbor",
    "ed25519",
    "macros",
    "serde",
    "ping",
    "gossipsub",
] }

# crypto (Mental Poker)
ark-ec = "0.5"
ark-ff = "0.5"
ark-std = "0.5"
ark-serialize = { version = "0.5", features = ["derive"] }
ark-bls12-381 = "0.5"
sha2 = "0.10"

# tui
ratatui = "0.30"
crossterm = "0.28"
unicode-width = "0.2"

# dev
pretty_assertions = "1"
proptest = "1"
quick-xml = "0.36"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
